# esp32wrom_raspberry_mqtt_ssl_tls

./: README.md  nhomtrang.docx
tcp/: sdkconfig
tcp/include/: mqtt_task.h  task_handle.h  user_config.h  wifiap_task.h  wifistation_task.h
tcp/main/: CMakeLists.txt  Kconfig.projbuild  app_main.c
tcp/user/: mqtt_task.c  task_handle.c  wifiap_task.c  wifistation_task.c
